--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.0",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.1",
+    "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
-    "passport": "^0.6.0",
+    "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0"
   }
 }
